# webapi-start

./: .dockerignore  .env  .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENCE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  dockerfile  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  deploy-aws-ecs.yml  deploy-cloud-run.yml  deploy-vercel.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_01_01_0001-0001_create_users_table.py
app/: __init__.py  bootstrap.py  main.py
app/api/: error_handlers.py  middleware.py
app/api/v1/: dependecies.py  dependencies.py  router.py
app/api/v1/endpoints/: routes.py
app/api/v1/routers/: auth.py  health.py  users.py
app/api/v1/schemas/: auth.py  common.py  user.py
app/core/: auth.py  config.py  error_handler.py  exceptions.py  logging.py  rate_limit.py  response.py  security.py  token.py
app/db/: session.py
app/domain/activity/: models.py  repository.py  routes.py  schemas.py  service.py
app/domain/auth/: routes.py
app/domain/customer/: models.py  repository.py  routes.py  schemas.py  service.py
app/domain/user/: entities.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py
app/infra/: health.py  logger.py  middleware.py  monitoring.py
app/infrastructure/database/: base.py  session.py
app/infrastructure/database/models/: __init__.py  user.py
app/infrastructure/database/repositories/: user.py
deploy/: README.md
deploy/aws/: README.md  task-definition.json
deploy/gcp/: README.md
deploy/vercel/: README.md
tests/: conftest.py  test_auth.py  test_customer.py  test_domain_user.py  test_health.py  test_items.py  test_user.py  test_user_acessorias_config.py  test_users.py
