[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webapi-start"
version = "1.1.0"
description = "API base profissional construída em FastAPI com Clean Architecture e DDD."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Matheus de Lima Rios", email = "limariosprofissional@gmail.com" },
]
keywords = ["fastapi", "ddd", "clean-architecture", "postgres", "starter", "template"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/limarios/webapi-start"
Documentation = "https://github.com/limarios/webapi-start#readme"
Issues = "https://github.com/limarios/webapi-start/issues"

# ──────────────────────────────────────────────────────────────────────────────
# Ruff — linter + formatter (super rápido, substitui isort/flake8)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (segurança)
    "RUF", # regras específicas do Ruff
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # tamanho de linha — Black trata
    "B008",  # function call in default argument (FastAPI usa Depends())
    "S101",  # assert em testes é ok
    "S104",  # bind 0.0.0.0 — necessário para rodar em containers (Docker/ECS/Cloud Run)
    "S105",  # "bearer" (OAuth2 spec) e defaults de dev em config.py são falsos positivos
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311"]
"alembic/**/*.py" = ["N", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

# ──────────────────────────────────────────────────────────────────────────────
# Black — formatter (executa após o Ruff)
# ──────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "alembic/versions"

# ──────────────────────────────────────────────────────────────────────────────
# mypy — static type checking
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ──────────────────────────────────────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ──────────────────────────────────────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/bootstrap.py",
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
fail_under = 70

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]
